--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Antriksh</title>
 
     <!-- Load Map Components from CDN-->
-    <a
+    <link
       rel="stylesheet"
       href="https://js.arcgis.com/4.30/esri/themes/light/main.css"
     />
